[gd_scene load_steps=3 format=3 uid="uid://cveoaqbghv0jl"]

[ext_resource type="Script" uid="uid://c7e5m8ow744ly" path="res://menus/main_menu.gd" id="1_1utg0"]
[ext_resource type="Theme" uid="uid://d3mjqj5le7q7p" path="res://menus/button.tres" id="1_epb8a"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1utg0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -21.5
offset_right = 22.0
offset_bottom = 21.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_epb8a")

[node name="Host" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Join" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="LobbyID" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Editor" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Level Editor"

[connection signal="pressed" from="VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Editor" to="." method="_on_editor_pressed"]
